Manages all codes in directory