@@ -1,121 +1,77 @@
 package MobileStore;
 
-import java.util.Objects;
+class Phone {
+    private String brand, model;
+    private double price;
+    Battery battery;
 
-/**
- * Represents a mobile phone with full encapsulation,
- * a Comparable implementation for price-based sorting,
- * and a proper deep-copy constructor.
- */
-class Phone implements Comparable<Phone> {
-
-    // ── Fields ────────────────────────────────────────────────────────────────
-    private String  brand;
-    private String  model;
-    private double  price;      // in PKR
-    private int     ram;        // in GB
-    private int     storage;    // in GB
-    private Battery battery;
-
-    // ── Constructors ──────────────────────────────────────────────────────────
-
-    /** Minimal constructor – uses defaults for battery, RAM, storage */
-    public Phone(String brand, String model, double price) {
-        this(brand, model, price, 4, 64, new Battery());
-    }
-
-    /** Full constructor */
-    public Phone(String brand, String model, double price,
-                 int ram, int storage, Battery battery) {
-        setBrand(brand);
-        setModel(model);
-        setPrice(price);
-        setRam(ram);
-        setStorage(storage);
-        this.battery = (battery != null) ? new Battery(battery) : new Battery();
-    }
-
-    /** Default constructor */
     public Phone() {
-        this("Unknown", "Unknown", 1.0);
+        battery = new Battery();
     }
 
-    /** Deep-copy constructor */
-    public Phone(Phone other) {
-        Objects.requireNonNull(other, "Source phone cannot be null.");
-        this.brand   = other.brand;
-        this.model   = other.model;
-        this.price   = other.price;
-        this.ram     = other.ram;
-        this.storage = other.storage;
-        this.battery = new Battery(other.battery);   // deep copy
+    public Phone(String brand, String model, double price) {
+
+        battery = new Battery();
+        this.brand = brand;
+        this.model = model;
+        if (price > 0) {
+            this.price = price;
+        } else {
+            System.out.println("Invalid");
+        }
     }
 
-    // ── Setters / Getters ─────────────────────────────────────────────────────
+    public Phone(Phone other) {// this is copy constructor
+
+        this.battery = new Battery();// deep copy constructor
+        this.brand = other.brand;
+        this.model = other.model;
+        if (other.price > 0) {
+            this.price = other.price;
+        } else {
+            System.out.println("Invalid");
+        }
+    }
 
     public void setPrice(double price) {
-        if (price <= 0) throw new IllegalArgumentException("Price must be positive.");
-        this.price = price;
+        if (price > 0) {
+            this.price = price;
+        }
     }
-    public double getPrice() { return price; }
+
+    public double getPrice() {
+        return price;
+    }
 
     public void setBrand(String brand) {
-        if (brand == null || brand.isBlank())
-            throw new IllegalArgumentException("Brand cannot be blank.");
-        this.brand = brand.trim();
+        if (brand == null || brand.trim().isEmpty()) {
+            System.out.println("Invalid");
+
+        } else {
+            this.brand = brand;
+        }
     }
-    public String getBrand() { return brand; }
+
+    public String getBrand() {
+        return brand;
+    }
 
     public void setModel(String model) {
-        if (model == null || model.isBlank())
-            throw new IllegalArgumentException("Model cannot be blank.");
-        this.model = model.trim();
-    }
-    public String getModel() { return model; }
+        if (model == null || model.trim().isEmpty()) {
+            System.out.println("Invalid");
 
-    public void setRam(int ram) {
-        if (ram <= 0) throw new IllegalArgumentException("RAM must be positive.");
-        this.ram = ram;
-    }
-    public int getRam() { return ram; }
-
-    public void setStorage(int storage) {
-        if (storage <= 0) throw new IllegalArgumentException("Storage must be positive.");
-        this.storage = storage;
-    }
-    public int getStorage() { return storage; }
-
-    public Battery getBattery() { return battery; }
-
-    // ── Comparable: sort by price ascending ───────────────────────────────────
-    @Override
-    public int compareTo(Phone other) {
-        return Double.compare(this.price, other.price);
+        } else {
+            this.model = model;
+        }
     }
 
-    // ── Equality: brand + model uniquely identify a phone ─────────────────────
-    @Override
-    public boolean equals(Object obj) {
-        if (this == obj) return true;
-        if (!(obj instanceof Phone other)) return false;
-        return brand.equalsIgnoreCase(other.brand) && model.equalsIgnoreCase(other.model);
-    }
-
-    @Override
-    public int hashCode() {
-        return Objects.hash(brand.toLowerCase(), model.toLowerCase());
-    }
-
-    // ── Display ───────────────────────────────────────────────────────────────
-
-    /** Compact one-line summary */
-    public String toSummary() {
-        return String.format("%-10s %-18s PKR %,-12.2f  %dGB RAM  %dGB Storage  [%s]",
-                brand, model, price, ram, storage, battery);
+    public String getModel() {
+        return model;
     }
 
     @Override
     public String toString() {
-        return toSummary();
+        return brand + " " + model + " " + " price: " + price + " Battery type: " + battery.getType()
+                + " Capacity(mAH): " + battery.getCapacity() + "\n";
     }
 }
